--- a/tape.ioc
+++ b/tape.ioc
@@ -1,5 +1,6 @@
 #MicroXplorer Configuration settings - do not modify
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32F1
 Mcu.IP0=NVIC
@@ -10,26 +11,27 @@ Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
-Mcu.Pin10=PA8
-Mcu.Pin11=PA9
-Mcu.Pin12=PA10
-Mcu.Pin13=PA11
-Mcu.Pin14=PA13
-Mcu.Pin15=PA14
-Mcu.Pin16=PB6
-Mcu.Pin17=PB7
-Mcu.Pin18=PB8
-Mcu.Pin19=PB9
+Mcu.Pin10=PA12
+Mcu.Pin11=PA13
+Mcu.Pin12=PA14
+Mcu.Pin13=PA15
+Mcu.Pin14=PB3
+Mcu.Pin15=PB4
+Mcu.Pin16=PB5
+Mcu.Pin17=PB6
+Mcu.Pin18=PB7
+Mcu.Pin19=PB8
 Mcu.Pin2=PD1-OSC_OUT
-Mcu.Pin20=VP_SYS_VS_Systick
-Mcu.Pin3=PB1
-Mcu.Pin4=PB10
-Mcu.Pin5=PB11
-Mcu.Pin6=PB12
-Mcu.Pin7=PB13
-Mcu.Pin8=PB14
-Mcu.Pin9=PB15
-Mcu.PinsNb=21
+Mcu.Pin20=PB9
+Mcu.Pin21=VP_SYS_VS_Systick
+Mcu.Pin3=PB0
+Mcu.Pin4=PB1
+Mcu.Pin5=PB10
+Mcu.Pin6=PB11
+Mcu.Pin7=PA9
+Mcu.Pin8=PA10
+Mcu.Pin9=PA11
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -46,30 +48,46 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PA10.GPIOParameters=GPIO_Label
-PA10.GPIO_Label=H SPEED
+PA10.GPIOParameters=PinState,GPIO_Label
+PA10.GPIO_Label=ALWAYS_HIGH
 PA10.Locked=true
-PA10.Signal=GPIO_Input
-PA11.GPIOParameters=GPIO_Label
-PA11.GPIO_Label=MT FWD
+PA10.PinState=GPIO_PIN_SET
+PA10.Signal=GPIO_Output
+PA11.GPIOParameters=PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
+PA11.GPIO_Label=POS 0
+PA11.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PA11.Locked=true
-PA11.Signal=GPIO_Input
+PA11.PinState=GPIO_PIN_SET
+PA11.Signal=GPIO_Output
+PA12.GPIOParameters=PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
+PA12.GPIO_Label=POS 1_2
+PA12.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PA12.Locked=true
+PA12.PinState=GPIO_PIN_SET
+PA12.Signal=GPIO_Output
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA8.GPIOParameters=GPIO_Label
-PA8.GPIO_Label=L plus
-PA8.Locked=true
-PA8.Signal=GPIO_Input
-PA9.GPIOParameters=GPIO_Label
-PA9.GPIO_Label=MT RVS
+PA15.GPIOParameters=PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
+PA15.GPIO_Label=POS 2_5
+PA15.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PA15.Locked=true
+PA15.PinState=GPIO_PIN_SET
+PA15.Signal=GPIO_Output
+PA9.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA9.GPIO_Label=POLARITY
+PA9.GPIO_PuPd=GPIO_PULLDOWN
 PA9.Locked=true
 PA9.Signal=GPIO_Input
+PB0.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
+PB0.GPIO_Label=BTN_CALL
+PB0.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PB0.Locked=true
+PB0.Signal=GPIO_Output
 PB1.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
-PB1.GPIO_Label=BTN_CALL
+PB1.GPIO_Label=BTN_PLAY_PAUSE
 PB1.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
-PB1.Locked=true
 PB1.Signal=GPIO_Output
 PB10.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
 PB10.GPIO_Label=BTN_PREV
@@ -80,47 +98,37 @@ PB11.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
 PB11.GPIO_Label=BTN_NEXT
 PB11.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PB11.Signal=GPIO_Output
-PB12.GPIOParameters=PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
-PB12.GPIO_Label=POS 0
-PB12.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
-PB12.Locked=true
-PB12.PinState=GPIO_PIN_SET
-PB12.Signal=GPIO_Output
-PB13.GPIOParameters=PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
-PB13.GPIO_Label=POS 1_2
-PB13.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
-PB13.Locked=true
-PB13.PinState=GPIO_PIN_SET
-PB13.Signal=GPIO_Output
-PB14.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
-PB14.GPIO_Label=POS 2_5
-PB14.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
-PB14.Locked=true
-PB14.Signal=GPIO_Output
-PB15.GPIOParameters=GPIO_Label
-PB15.GPIO_Label=L minus
-PB15.Locked=true
-PB15.Signal=GPIO_Input
-PB6.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
-PB6.GPIO_Label=PHOTO F
-PB6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PB3.GPIOParameters=GPIO_Label
+PB3.GPIO_Label=MT FWD
+PB3.Locked=true
+PB3.Signal=GPIO_Input
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=MT RVS
+PB4.Signal=GPIO_Input
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=H SPEED
+PB5.Locked=true
+PB5.Signal=GPIO_Input
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=L_plus
 PB6.Locked=true
-PB6.Signal=GPIO_Output
-PB7.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
-PB7.GPIO_Label=PHOTO R
-PB7.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PB6.Signal=GPIO_Input
+PB7.GPIOParameters=GPIO_Label
+PB7.GPIO_Label=L_minus
 PB7.Locked=true
-PB7.Signal=GPIO_Output
-PB8.GPIOParameters=PinState,GPIO_Label
-PB8.GPIO_Label=ALWAYS HIGH
+PB7.Signal=GPIO_Input
+PB8.GPIOParameters=PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
+PB8.GPIO_Label=PHOTO F
+PB8.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PB8.Locked=true
 PB8.PinState=GPIO_PIN_SET
 PB8.Signal=GPIO_Output
-PB9.GPIOParameters=GPIO_PuPd,GPIO_Label
-PB9.GPIO_Label=POLARITY
-PB9.GPIO_PuPd=GPIO_PULLDOWN
+PB9.GPIOParameters=PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
+PB9.GPIO_Label=PHOTO R
+PB9.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PB9.Locked=true
-PB9.Signal=GPIO_Input
+PB9.PinState=GPIO_PIN_SET
+PB9.Signal=GPIO_Output
 PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
 PC13-TAMPER-RTC.GPIO_Label=LED
 PC13-TAMPER-RTC.Locked=true
@@ -142,7 +150,7 @@ ProjectManager.DeviceId=STM32F103C8Tx
 ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.3
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x200
+ProjectManager.HeapSize=0x20
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
@@ -153,7 +161,7 @@ ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=tape.ioc
 ProjectManager.ProjectName=tape
 ProjectManager.RegisterCallBack=
-ProjectManager.StackSize=0x400
+ProjectManager.StackSize=0x20
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
