--- a/tape.ioc
+++ b/tape.ioc
@@ -1,192 +1,193 @@
 #MicroXplorer Configuration settings - do not modify
-File.Version=6
-GPIO.groupedBy=Group By Peripherals
-KeepUserPlacement=false
 Mcu.Family=STM32F1
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
+ProjectManager.MainLocation=Core/Src
+RCC.MCOFreq_Value=72000000
+PB13.GPIOParameters=PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
+ProjectManager.ProjectFileName=tape.ioc
+PB8.GPIOParameters=GPIO_PuPd,GPIO_Label
+PD1-OSC_OUT.Mode=HSE-External-Oscillator
+PB9.GPIO_Label=ALWAYS HIGH
+ProjectManager.KeepUserCode=true
+Mcu.UserName=STM32F103C8Tx
+Mcu.PinsNb=22
+ProjectManager.NoMain=false
+RCC.PLLCLKFreq_Value=72000000
+PA9.GPIO_Label=MT RVS
+PB14.GPIO_Label=POS 2_5
+PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false
+PA9.GPIOParameters=GPIO_Label
+PB8.GPIO_PuPd=GPIO_PULLDOWN
+PB11.GPIO_Label=BTN_NEXT
+PA11.GPIOParameters=GPIO_Label
+PB9.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PC13-TAMPER-RTC.Signal=GPIO_Output
+PA11.GPIO_Label=MT FWD
+RCC.ADCFreqValue=36000000
+ProjectManager.DefaultFWLocation=true
+PB0.GPIO_Label=BTN_CALL
+PB6.GPIO_Label=PHOTO F
+PD0-OSC_IN.Signal=RCC_OSC_IN
+PB12.Locked=true
+ProjectManager.DeletePrevious=true
+PB14.Locked=true
+RCC.APB1CLKDivider=RCC_HCLK_DIV2
+PB10.Locked=true
+PB13.GPIO_Label=POS 1_2
+PB11.Signal=GPIO_Output
+PB13.Signal=GPIO_Output
+PB15.Signal=GPIO_Input
+PinOutPanel.RotationAngle=0
+RCC.FamilyName=M
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+ProjectManager.StackSize=0x10
+PD1-OSC_OUT.Signal=RCC_OSC_OUT
+PB9.GPIOParameters=PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
+PA13.Signal=SYS_JTMS-SWDIO
+RCC.FCLKCortexFreq_Value=72000000
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 Mcu.IP2=SYS
+PB8.GPIO_Label=POLARITY
+Mcu.IP0=NVIC
+PB10.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PA11.Locked=true
+Mcu.IP1=RCC
+PA8.GPIO_Label=L_plus
+PB14.PinState=GPIO_PIN_SET
+Mcu.UserConstants=
+ProjectManager.TargetToolchain=STM32CubeIDE
+PB10.GPIO_Label=BTN_PREV
+Mcu.ThirdPartyNb=0
+PB7.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
+RCC.HCLKFreq_Value=72000000
 Mcu.IPNb=3
-Mcu.Name=STM32F103C(8-B)Tx
-Mcu.Package=LQFP48
+ProjectManager.PreviousToolchain=
+RCC.APB2TimFreq_Value=72000000
+PA9.Signal=GPIO_Input
+PB6.Signal=GPIO_Output
+PB13.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PB11.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
+PB12.PinState=GPIO_PIN_SET
+PB9.Locked=true
+PA8.GPIOParameters=GPIO_Label
+Mcu.Pin6=PB11
+Mcu.Pin7=PB12
+ProjectManager.RegisterCallBack=
+PC13-TAMPER-RTC.Locked=true
+Mcu.Pin8=PB13
+RCC.USBFreq_Value=72000000
+Mcu.Pin9=PB14
+PB14.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PB11.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+RCC.AHBFreq_Value=72000000
+PB13.Locked=true
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
-Mcu.Pin10=PB15
-Mcu.Pin11=PA8
-Mcu.Pin12=PA9
-Mcu.Pin13=PA10
-Mcu.Pin14=PA11
-Mcu.Pin15=PA13
-Mcu.Pin16=PA14
-Mcu.Pin17=PB6
-Mcu.Pin18=PB7
-Mcu.Pin19=PB8
+GPIO.groupedBy=Group By Peripherals
+PD0-OSC_IN.Mode=HSE-External-Oscillator
 Mcu.Pin2=PD1-OSC_OUT
-Mcu.Pin20=PB9
-Mcu.Pin21=VP_SYS_VS_Systick
+PB10.Signal=GPIO_Output
 Mcu.Pin3=PB0
 Mcu.Pin4=PB1
 Mcu.Pin5=PB10
-Mcu.Pin6=PB11
-Mcu.Pin7=PB12
-Mcu.Pin8=PB13
-Mcu.Pin9=PB14
-Mcu.PinsNb=22
-Mcu.ThirdPartyNb=0
-Mcu.UserConstants=
-Mcu.UserName=STM32F103C8Tx
-MxCube.Version=6.1.1
-MxDb.Version=DB.6.0.10
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PA10.GPIOParameters=GPIO_Label
-PA10.GPIO_Label=H SPEED
-PA10.Locked=true
-PA10.Signal=GPIO_Input
-PA11.GPIOParameters=GPIO_Label
-PA11.GPIO_Label=MT FWD
-PA11.Locked=true
-PA11.Signal=GPIO_Input
-PA13.Mode=Serial_Wire
-PA13.Signal=SYS_JTMS-SWDIO
-PA14.Mode=Serial_Wire
-PA14.Signal=SYS_JTCK-SWCLK
-PA8.GPIOParameters=GPIO_Label
-PA8.GPIO_Label=L_plus
-PA8.Locked=true
-PA8.Signal=GPIO_Input
-PA9.GPIOParameters=GPIO_Label
-PA9.GPIO_Label=MT RVS
-PA9.Locked=true
-PA9.Signal=GPIO_Input
-PB0.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
-PB0.GPIO_Label=BTN_CALL
-PB0.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
-PB0.Locked=true
-PB0.Signal=GPIO_Output
-PB1.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
-PB1.GPIO_Label=BTN_PLAY_PAUSE
-PB1.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
-PB1.Signal=GPIO_Output
-PB10.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
-PB10.GPIO_Label=BTN_PREV
-PB10.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
-PB10.Locked=true
-PB10.Signal=GPIO_Output
-PB11.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
-PB11.GPIO_Label=BTN_NEXT
-PB11.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
-PB11.Signal=GPIO_Output
-PB12.GPIOParameters=PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
-PB12.GPIO_Label=POS 0
-PB12.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
-PB12.Locked=true
-PB12.PinState=GPIO_PIN_SET
-PB12.Signal=GPIO_Output
-PB13.GPIOParameters=PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
-PB13.GPIO_Label=POS 1_2
-PB13.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
-PB13.Locked=true
-PB13.PinState=GPIO_PIN_SET
-PB13.Signal=GPIO_Output
-PB14.GPIOParameters=PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
-PB14.GPIO_Label=POS 2_5
-PB14.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
-PB14.Locked=true
-PB14.PinState=GPIO_PIN_SET
 PB14.Signal=GPIO_Output
-PB15.GPIOParameters=GPIO_Label
-PB15.GPIO_Label=L_minus
-PB15.Locked=true
-PB15.Signal=GPIO_Input
-PB6.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
-PB6.GPIO_Label=PHOTO F
-PB6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
-PB6.Locked=true
-PB6.Signal=GPIO_Output
-PB7.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
-PB7.GPIO_Label=PHOTO R
-PB7.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
-PB7.Locked=true
-PB7.Signal=GPIO_Output
-PB8.GPIOParameters=GPIO_Label
-PB8.GPIO_Label=POLARITY
-PB8.Locked=true
-PB8.Signal=GPIO_Input
-PB9.GPIOParameters=PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
-PB9.GPIO_Label=ALWAYS HIGH
-PB9.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
-PB9.Locked=true
-PB9.PinState=GPIO_PIN_SET
-PB9.Signal=GPIO_Output
-PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
-PC13-TAMPER-RTC.GPIO_Label=LED
-PC13-TAMPER-RTC.Locked=true
-PC13-TAMPER-RTC.Signal=GPIO_Output
-PD0-OSC_IN.Mode=HSE-External-Oscillator
-PD0-OSC_IN.Signal=RCC_OSC_IN
-PD1-OSC_OUT.Mode=HSE-External-Oscillator
-PD1-OSC_OUT.Signal=RCC_OSC_OUT
-PinOutPanel.RotationAngle=0
-ProjectManager.AskForMigrate=true
-ProjectManager.BackupPrevious=false
-ProjectManager.CompilerOptimize=6
-ProjectManager.ComputerToolchain=false
-ProjectManager.CoupleFile=false
-ProjectManager.CustomerFirmwarePackage=
-ProjectManager.DefaultFWLocation=true
-ProjectManager.DeletePrevious=true
-ProjectManager.DeviceId=STM32F103C8Tx
-ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.3
-ProjectManager.FreePins=false
-ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x10
-ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
-ProjectManager.LibraryCopy=1
-ProjectManager.MainLocation=Core/Src
-ProjectManager.NoMain=false
-ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=tape.ioc
-ProjectManager.ProjectName=tape
-ProjectManager.RegisterCallBack=
-ProjectManager.StackSize=0x10
-ProjectManager.TargetToolchain=STM32CubeIDE
-ProjectManager.ToolChainLocation=
-ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false
-RCC.ADCFreqValue=36000000
-RCC.AHBFreq_Value=72000000
-RCC.APB1CLKDivider=RCC_HCLK_DIV2
-RCC.APB1Freq_Value=36000000
-RCC.APB1TimFreq_Value=72000000
-RCC.APB2Freq_Value=72000000
-RCC.APB2TimFreq_Value=72000000
-RCC.FCLKCortexFreq_Value=72000000
-RCC.FamilyName=M
-RCC.HCLKFreq_Value=72000000
-RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
-RCC.MCOFreq_Value=72000000
-RCC.PLLCLKFreq_Value=72000000
-RCC.PLLMCOFreq_Value=36000000
-RCC.PLLMUL=RCC_PLL_MUL9
-RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
-RCC.SYSCLKFreq_VALUE=72000000
-RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.TimSysFreq_Value=72000000
-RCC.USBFreq_Value=72000000
-RCC.VCOOutput2Freq_Value=8000000
-VP_SYS_VS_Systick.Mode=SysTick
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PB12.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PA8.Locked=true
 board=custom
+NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+ProjectManager.LastFirmware=true
+PC13-TAMPER-RTC.GPIO_Label=LED
+RCC.PLLMUL=RCC_PLL_MUL9
+PB12.GPIO_Label=POS 0
+RCC.VCOOutput2Freq_Value=8000000
+ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.3
+MxDb.Version=DB.6.0.21
+PB0.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
+RCC.APB2Freq_Value=72000000
+PB13.PinState=GPIO_PIN_SET
+ProjectManager.BackupPrevious=false
+MxCube.Version=6.2.1
+PB15.GPIO_Label=L_minus
+PA14.Mode=Serial_Wire
+PB7.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PB1.GPIO_Label=BTN_PLAY_PAUSE
+File.Version=6
+PA10.GPIO_Label=H SPEED
+PA10.GPIOParameters=GPIO_Label
+VP_SYS_VS_Systick.Mode=SysTick
+PA9.Locked=true
+PB7.Signal=GPIO_Output
+PA8.Signal=GPIO_Input
+PB8.Locked=true
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PB6.Locked=true
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PB15.GPIOParameters=GPIO_Label
+PA13.Mode=Serial_Wire
+ProjectManager.FreePins=false
+RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
+ProjectManager.AskForMigrate=true
+Mcu.Name=STM32F103C(8-B)Tx
+PB6.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
+ProjectManager.HalAssertFull=false
+PB0.Locked=true
+ProjectManager.ProjectName=tape
+ProjectManager.UnderRoot=true
+RCC.PLLMCOFreq_Value=36000000
+ProjectManager.CoupleFile=false
+PB7.GPIO_Label=PHOTO R
+RCC.SYSCLKFreq_VALUE=72000000
+Mcu.Package=LQFP48
+PB9.Signal=GPIO_Output
+PB1.Signal=GPIO_Output
+RCC.TimSysFreq_Value=72000000
+Mcu.Pin20=PB9
+Mcu.Pin21=VP_SYS_VS_Systick
+PA10.Locked=true
+NVIC.ForceEnableDMAVector=true
+KeepUserPlacement=false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+ProjectManager.CompilerOptimize=6
+PB9.PinState=GPIO_PIN_SET
+ProjectManager.ToolChainLocation=
+PB6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PA11.Signal=GPIO_Input
+VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+PA10.Signal=GPIO_Input
+PA14.Signal=SYS_JTCK-SWCLK
+ProjectManager.HeapSize=0x10
+Mcu.Pin15=PA13
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+Mcu.Pin16=PA14
+Mcu.Pin13=PA10
+Mcu.Pin14=PA11
+PB14.GPIOParameters=PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
+Mcu.Pin19=PB8
+ProjectManager.ComputerToolchain=false
+Mcu.Pin17=PB6
+Mcu.Pin18=PB7
+NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+Mcu.Pin11=PA8
+Mcu.Pin12=PA9
+Mcu.Pin10=PB15
+PB7.Locked=true
+RCC.APB1TimFreq_Value=72000000
+PB8.Signal=GPIO_Input
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PB0.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PB10.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
+PB1.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+RCC.APB1Freq_Value=36000000
+PB0.Signal=GPIO_Output
+ProjectManager.CustomerFirmwarePackage=
+ProjectManager.DeviceId=STM32F103C8Tx
+PB12.GPIOParameters=PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
+PB12.Signal=GPIO_Output
+ProjectManager.LibraryCopy=1
+PB15.Locked=true
+PB1.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
 isbadioc=false
