--- a/tape.ioc
+++ b/tape.ioc
@@ -5,9 +5,7 @@ ProjectManager.MainLocation=Core/Src
 RCC.MCOFreq_Value=72000000
 PB13.GPIOParameters=PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
 ProjectManager.ProjectFileName=tape.ioc
-PB8.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD1-OSC_OUT.Mode=HSE-External-Oscillator
-PB9.GPIO_Label=ALWAYS HIGH
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F103C8Tx
 Mcu.PinsNb=22
@@ -18,10 +16,8 @@ PB14.GPIO_Label=POS 2_5
 PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false
 PA9.GPIOParameters=GPIO_Label
-PB8.GPIO_PuPd=GPIO_PULLDOWN
 PB11.GPIO_Label=BTN_NEXT
 PA11.GPIOParameters=GPIO_Label
-PB9.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PC13-TAMPER-RTC.Signal=GPIO_Output
 PA11.GPIO_Label=MT FWD
 RCC.ADCFreqValue=36000000
@@ -42,13 +38,14 @@ PinOutPanel.RotationAngle=0
 RCC.FamilyName=M
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 ProjectManager.StackSize=0x10
+PA0-WKUP.GPIO_Label=POLARITY
+PA0-WKUP.Signal=GPIO_Input
+PA0-WKUP.Locked=true
 PD1-OSC_OUT.Signal=RCC_OSC_OUT
-PB9.GPIOParameters=PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
 PA13.Signal=SYS_JTMS-SWDIO
 RCC.FCLKCortexFreq_Value=72000000
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 Mcu.IP2=SYS
-PB8.GPIO_Label=POLARITY
 Mcu.IP0=NVIC
 PB10.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PA11.Locked=true
@@ -69,16 +66,17 @@ PB6.Signal=GPIO_Output
 PB13.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PB11.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
 PB12.PinState=GPIO_PIN_SET
-PB9.Locked=true
 PA8.GPIOParameters=GPIO_Label
-Mcu.Pin6=PB11
-Mcu.Pin7=PB12
+Mcu.Pin6=PB1
+Mcu.Pin7=PB10
 ProjectManager.RegisterCallBack=
 PC13-TAMPER-RTC.Locked=true
-Mcu.Pin8=PB13
+Mcu.Pin8=PB11
 RCC.USBFreq_Value=72000000
-Mcu.Pin9=PB14
+Mcu.Pin9=PB12
+PA1.GPIO_PuPd=GPIO_PULLUP
 PB14.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PA1.Signal=GPIO_Input
 PB11.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 RCC.AHBFreq_Value=72000000
 PB13.Locked=true
@@ -88,9 +86,10 @@ GPIO.groupedBy=Group By Peripherals
 PD0-OSC_IN.Mode=HSE-External-Oscillator
 Mcu.Pin2=PD1-OSC_OUT
 PB10.Signal=GPIO_Output
-Mcu.Pin3=PB0
-Mcu.Pin4=PB1
-Mcu.Pin5=PB10
+Mcu.Pin3=PA0-WKUP
+PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label
+Mcu.Pin4=PA1
+Mcu.Pin5=PB0
 PB14.Signal=GPIO_Output
 ProjectManager.ProjectBuild=false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -108,6 +107,7 @@ ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.3
 MxDb.Version=DB.6.0.21
 PB0.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
 RCC.APB2Freq_Value=72000000
+PA1.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB13.PinState=GPIO_PIN_SET
 ProjectManager.BackupPrevious=false
 MxCube.Version=6.2.1
@@ -116,13 +116,13 @@ PA14.Mode=Serial_Wire
 PB7.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PB1.GPIO_Label=BTN_PLAY_PAUSE
 File.Version=6
+PA1.GPIO_Label=RESUME
 PA10.GPIO_Label=H SPEED
 PA10.GPIOParameters=GPIO_Label
 VP_SYS_VS_Systick.Mode=SysTick
 PA9.Locked=true
 PB7.Signal=GPIO_Output
 PA8.Signal=GPIO_Input
-PB8.Locked=true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PB6.Locked=true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -142,17 +142,16 @@ ProjectManager.CoupleFile=false
 PB7.GPIO_Label=PHOTO R
 RCC.SYSCLKFreq_VALUE=72000000
 Mcu.Package=LQFP48
-PB9.Signal=GPIO_Output
 PB1.Signal=GPIO_Output
 RCC.TimSysFreq_Value=72000000
-Mcu.Pin20=PB9
+PA1.Locked=true
+Mcu.Pin20=PB7
 Mcu.Pin21=VP_SYS_VS_Systick
 PA10.Locked=true
 NVIC.ForceEnableDMAVector=true
 KeepUserPlacement=false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 ProjectManager.CompilerOptimize=6
-PB9.PinState=GPIO_PIN_SET
 ProjectManager.ToolChainLocation=
 PB6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PA11.Signal=GPIO_Input
@@ -160,23 +159,23 @@ VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 PA10.Signal=GPIO_Input
 PA14.Signal=SYS_JTCK-SWCLK
 ProjectManager.HeapSize=0x10
-Mcu.Pin15=PA13
+Mcu.Pin15=PA10
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.Pin16=PA14
-Mcu.Pin13=PA10
-Mcu.Pin14=PA11
+Mcu.Pin16=PA11
+Mcu.Pin13=PA8
+Mcu.Pin14=PA9
 PB14.GPIOParameters=PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
-Mcu.Pin19=PB8
+Mcu.Pin19=PB6
 ProjectManager.ComputerToolchain=false
-Mcu.Pin17=PB6
-Mcu.Pin18=PB7
+Mcu.Pin17=PA13
+Mcu.Pin18=PA14
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-Mcu.Pin11=PA8
-Mcu.Pin12=PA9
-Mcu.Pin10=PB15
+Mcu.Pin11=PB14
+Mcu.Pin12=PB15
+Mcu.Pin10=PB13
 PB7.Locked=true
 RCC.APB1TimFreq_Value=72000000
-PB8.Signal=GPIO_Input
+PA0-WKUP.GPIO_PuPd=GPIO_PULLUP
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PB0.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PB10.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
