--- a/tape.ioc
+++ b/tape.ioc
@@ -1,192 +1,198 @@
 #MicroXplorer Configuration settings - do not modify
 Mcu.Family=STM32F1
-RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 ProjectManager.MainLocation=Core/Src
 RCC.MCOFreq_Value=72000000
 PB13.GPIOParameters=PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
-ProjectManager.ProjectFileName=tape.ioc
-PD1-OSC_OUT.Mode=HSE-External-Oscillator
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F103C8Tx
-Mcu.PinsNb=22
-ProjectManager.NoMain=false
 RCC.PLLCLKFreq_Value=72000000
-PA9.GPIO_Label=MT RVS
 PB14.GPIO_Label=POS 2_5
 PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false
 PA9.GPIOParameters=GPIO_Label
-PB11.GPIO_Label=BTN_NEXT
 PA11.GPIOParameters=GPIO_Label
-PC13-TAMPER-RTC.Signal=GPIO_Output
-PA11.GPIO_Label=MT FWD
 RCC.ADCFreqValue=36000000
-ProjectManager.DefaultFWLocation=true
+PA7.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PB0.GPIO_Label=BTN_CALL
 PB6.GPIO_Label=PHOTO F
+PB13.GPIO_Label=POS 1_2
+PB11.Signal=GPIO_Output
+PB13.Signal=GPIO_Output
+PB15.Signal=GPIO_Input
+PinOutPanel.RotationAngle=0
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+ProjectManager.StackSize=0x10
+PD1-OSC_OUT.Signal=RCC_OSC_OUT
+RCC.FCLKCortexFreq_Value=72000000
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+Mcu.IP2=SYS
+Mcu.IP0=NVIC
+PB10.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+Mcu.IP1=RCC
+Mcu.UserConstants=
+Mcu.ThirdPartyNb=0
+RCC.HCLKFreq_Value=72000000
+Mcu.IPNb=3
+ProjectManager.PreviousToolchain=
+RCC.APB2TimFreq_Value=72000000
+PB6.Signal=GPIO_Output
+PB13.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PB12.PinState=GPIO_PIN_SET
+PA8.GPIOParameters=GPIO_Label
+Mcu.Pin6=PB0
+Mcu.Pin7=PB1
+Mcu.Pin8=PB10
+Mcu.Pin9=PB11
+PA1.GPIO_PuPd=GPIO_PULLUP
+RCC.AHBFreq_Value=72000000
+PB13.Locked=true
+Mcu.Pin0=PC13-TAMPER-RTC
+Mcu.Pin1=PD0-OSC_IN
+GPIO.groupedBy=Group By Peripherals
+Mcu.Pin2=PD1-OSC_OUT
+Mcu.Pin3=PA0-WKUP
+Mcu.Pin4=PA1
+PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label
+Mcu.Pin5=PA7
+ProjectManager.ProjectBuild=false
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PA8.Locked=true
+PB12.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+RCC.PLLMUL=RCC_PLL_MUL9
+PB12.GPIO_Label=POS 0
+ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.3
+MxDb.Version=DB.6.0.21
+PB0.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
+PA1.GPIOParameters=GPIO_PuPd,GPIO_Label
+ProjectManager.BackupPrevious=false
+PA14.Mode=Serial_Wire
+PB1.GPIO_Label=BTN_PLAY_PAUSE
+File.Version=6
+PA10.GPIO_Label=H SPEED
+PB7.Signal=GPIO_Output
+PA8.Signal=GPIO_Input
+PB6.Locked=true
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PB6.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
+ProjectManager.HalAssertFull=false
+PB0.Locked=true
+ProjectManager.ProjectName=tape
+RCC.PLLMCOFreq_Value=36000000
+PB7.GPIO_Label=PHOTO R
+Mcu.Package=LQFP48
+PB1.Signal=GPIO_Output
+PA7.Locked=true
+ProjectManager.ToolChainLocation=
+PB6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+PA10.Signal=GPIO_Input
+PB14.GPIOParameters=PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
+RCC.APB1TimFreq_Value=72000000
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PB0.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PB10.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
+ProjectManager.CustomerFirmwarePackage=
+PB15.Locked=true
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
+ProjectManager.ProjectFileName=tape.ioc
+PD1-OSC_OUT.Mode=HSE-External-Oscillator
+Mcu.PinsNb=23
+ProjectManager.NoMain=false
+PA9.GPIO_Label=MT RVS
+PB11.GPIO_Label=BTN_NEXT
+PC13-TAMPER-RTC.Signal=GPIO_Output
+PA11.GPIO_Label=MT FWD
+ProjectManager.DefaultFWLocation=true
 PD0-OSC_IN.Signal=RCC_OSC_IN
 PB12.Locked=true
 ProjectManager.DeletePrevious=true
 PB14.Locked=true
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
 PB10.Locked=true
-PB13.GPIO_Label=POS 1_2
-PB11.Signal=GPIO_Output
-PB13.Signal=GPIO_Output
-PB15.Signal=GPIO_Input
-PinOutPanel.RotationAngle=0
 RCC.FamilyName=M
-RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-ProjectManager.StackSize=0x10
 PA0-WKUP.GPIO_Label=POLARITY
 PA0-WKUP.Signal=GPIO_Input
 PA0-WKUP.Locked=true
-PD1-OSC_OUT.Signal=RCC_OSC_OUT
 PA13.Signal=SYS_JTMS-SWDIO
-RCC.FCLKCortexFreq_Value=72000000
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.IP2=SYS
-Mcu.IP0=NVIC
-PB10.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PA11.Locked=true
-Mcu.IP1=RCC
 PA8.GPIO_Label=L_plus
 PB14.PinState=GPIO_PIN_SET
-Mcu.UserConstants=
 ProjectManager.TargetToolchain=STM32CubeIDE
 PB10.GPIO_Label=BTN_PREV
-Mcu.ThirdPartyNb=0
 PB7.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
-RCC.HCLKFreq_Value=72000000
-Mcu.IPNb=3
-ProjectManager.PreviousToolchain=
-RCC.APB2TimFreq_Value=72000000
 PA9.Signal=GPIO_Input
-PB6.Signal=GPIO_Output
-PB13.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PB11.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
-PB12.PinState=GPIO_PIN_SET
-PA8.GPIOParameters=GPIO_Label
-Mcu.Pin6=PB1
-Mcu.Pin7=PB10
 ProjectManager.RegisterCallBack=
 PC13-TAMPER-RTC.Locked=true
-Mcu.Pin8=PB11
 RCC.USBFreq_Value=72000000
-Mcu.Pin9=PB12
-PA1.GPIO_PuPd=GPIO_PULLUP
 PB14.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
-PA1.Signal=GPIO_Input
 PB11.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
-RCC.AHBFreq_Value=72000000
-PB13.Locked=true
-Mcu.Pin0=PC13-TAMPER-RTC
-Mcu.Pin1=PD0-OSC_IN
-GPIO.groupedBy=Group By Peripherals
+PA1.Signal=GPIO_Input
 PD0-OSC_IN.Mode=HSE-External-Oscillator
-Mcu.Pin2=PD1-OSC_OUT
 PB10.Signal=GPIO_Output
-Mcu.Pin3=PA0-WKUP
-PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label
-Mcu.Pin4=PA1
-Mcu.Pin5=PB0
 PB14.Signal=GPIO_Output
-ProjectManager.ProjectBuild=false
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PB12.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
-PA8.Locked=true
 board=custom
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 ProjectManager.LastFirmware=true
 PC13-TAMPER-RTC.GPIO_Label=LED
-RCC.PLLMUL=RCC_PLL_MUL9
-PB12.GPIO_Label=POS 0
 RCC.VCOOutput2Freq_Value=8000000
-ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.3
-MxDb.Version=DB.6.0.21
-PB0.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
 RCC.APB2Freq_Value=72000000
-PA1.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB13.PinState=GPIO_PIN_SET
-ProjectManager.BackupPrevious=false
 MxCube.Version=6.2.1
 PB15.GPIO_Label=L_minus
-PA14.Mode=Serial_Wire
 PB7.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
-PB1.GPIO_Label=BTN_PLAY_PAUSE
-File.Version=6
 PA1.GPIO_Label=RESUME
-PA10.GPIO_Label=H SPEED
 PA10.GPIOParameters=GPIO_Label
 VP_SYS_VS_Systick.Mode=SysTick
 PA9.Locked=true
-PB7.Signal=GPIO_Output
-PA8.Signal=GPIO_Input
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PB6.Locked=true
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PB15.GPIOParameters=GPIO_Label
 PA13.Mode=Serial_Wire
 ProjectManager.FreePins=false
 RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32F103C(8-B)Tx
-PB6.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
-ProjectManager.HalAssertFull=false
-PB0.Locked=true
-ProjectManager.ProjectName=tape
 ProjectManager.UnderRoot=true
-RCC.PLLMCOFreq_Value=36000000
 ProjectManager.CoupleFile=false
-PB7.GPIO_Label=PHOTO R
 RCC.SYSCLKFreq_VALUE=72000000
-Mcu.Package=LQFP48
-PB1.Signal=GPIO_Output
+Mcu.Pin22=VP_SYS_VS_Systick
 RCC.TimSysFreq_Value=72000000
 PA1.Locked=true
-Mcu.Pin20=PB7
-Mcu.Pin21=VP_SYS_VS_Systick
+PA7.GPIO_Label=BTN_PLAY_PAUSE_CALL
+Mcu.Pin20=PB6
+Mcu.Pin21=PB7
 PA10.Locked=true
 NVIC.ForceEnableDMAVector=true
 KeepUserPlacement=false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 ProjectManager.CompilerOptimize=6
-ProjectManager.ToolChainLocation=
-PB6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PA11.Signal=GPIO_Input
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-PA10.Signal=GPIO_Input
 PA14.Signal=SYS_JTCK-SWCLK
 ProjectManager.HeapSize=0x10
-Mcu.Pin15=PA10
+Mcu.Pin15=PA9
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.Pin16=PA11
-Mcu.Pin13=PA8
-Mcu.Pin14=PA9
-PB14.GPIOParameters=PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
-Mcu.Pin19=PB6
+Mcu.Pin16=PA10
+Mcu.Pin13=PB15
+Mcu.Pin14=PA8
+Mcu.Pin19=PA14
 ProjectManager.ComputerToolchain=false
-Mcu.Pin17=PA13
-Mcu.Pin18=PA14
+Mcu.Pin17=PA11
+Mcu.Pin18=PA13
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-Mcu.Pin11=PB14
-Mcu.Pin12=PB15
-Mcu.Pin10=PB13
+Mcu.Pin11=PB13
+Mcu.Pin12=PB14
+Mcu.Pin10=PB12
 PB7.Locked=true
-RCC.APB1TimFreq_Value=72000000
 PA0-WKUP.GPIO_PuPd=GPIO_PULLUP
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PB0.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
-PB10.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
 PB1.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 RCC.APB1Freq_Value=36000000
 PB0.Signal=GPIO_Output
-ProjectManager.CustomerFirmwarePackage=
+PA7.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
 ProjectManager.DeviceId=STM32F103C8Tx
 PB12.GPIOParameters=PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
 PB12.Signal=GPIO_Output
 ProjectManager.LibraryCopy=1
-PB15.Locked=true
 PB1.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
+PA7.Signal=GPIO_Output
 isbadioc=false
