Use PA3 as "no repeat". Bridge to gnd to disable repeat.

--- a/tape.ioc
+++ b/tape.ioc
@@ -9,9 +9,11 @@ Mcu.UserName=STM32F103C8Tx
 RCC.PLLCLKFreq_Value=72000000
 PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=POS 2_5
+PA3.GPIO_PuPd=GPIO_PULLUP
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false
 PA9.GPIOParameters=GPIO_Label
 PA11.GPIOParameters=GPIO_Label
+PA3.GPIOParameters=GPIO_PuPd,GPIO_Label
 RCC.ADCFreqValue=36000000
 PA7.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PB0.GPIO_Label=BTN_CALL
@@ -41,10 +43,10 @@ PB6.Signal=GPIO_Output
 PB13.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PB12.PinState=GPIO_PIN_SET
 PA8.GPIOParameters=GPIO_Label
-Mcu.Pin6=PA7
-Mcu.Pin7=PB0
-Mcu.Pin8=PB1
-Mcu.Pin9=PB10
+Mcu.Pin6=PA3
+Mcu.Pin7=PA7
+Mcu.Pin8=PB0
+Mcu.Pin9=PB1
 PA1.GPIO_PuPd=GPIO_PULLUP
 RCC.AHBFreq_Value=72000000
 PB13.Locked=true
@@ -98,11 +100,12 @@ PB0.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PB10.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
 ProjectManager.CustomerFirmwarePackage=
 PB15.Locked=true
+PA3.Signal=GPIO_Input
 PA2.Locked=true
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 ProjectManager.ProjectFileName=tape.ioc
 PD1-OSC_OUT.Mode=HSE-External-Oscillator
-Mcu.PinsNb=24
+Mcu.PinsNb=25
 ProjectManager.NoMain=false
 PA9.GPIO_Label=MT RVS
 PB11.GPIO_Label=BTN_NEXT
@@ -138,7 +141,7 @@ PD0-OSC_IN.Mode=HSE-External-Oscillator
 PB10.Signal=GPIO_Output
 PB14.Signal=GPIO_Output
 board=custom
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 PC13-TAMPER-RTC.GPIO_Label=LED
 RCC.VCOOutput2Freq_Value=8000000
 RCC.APB2Freq_Value=72000000
@@ -157,17 +160,19 @@ ProjectManager.FreePins=false
 RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32F103C(8-B)Tx
+Mcu.Pin24=VP_SYS_VS_Systick
 PA2.Signal=GPIO_Input
 ProjectManager.UnderRoot=true
 ProjectManager.CoupleFile=false
 RCC.SYSCLKFreq_VALUE=72000000
-Mcu.Pin22=PB7
-Mcu.Pin23=VP_SYS_VS_Systick
+Mcu.Pin22=PB6
+Mcu.Pin23=PB7
 RCC.TimSysFreq_Value=72000000
 PA1.Locked=true
 PA7.GPIO_Label=BTN_PLAY_PAUSE_CALL
-Mcu.Pin20=PA14
-Mcu.Pin21=PB6
+Mcu.Pin20=PA13
+PA3.Locked=true
+Mcu.Pin21=PA14
 PA10.Locked=true
 NVIC.ForceEnableDMAVector=true
 KeepUserPlacement=false
@@ -176,19 +181,19 @@ ProjectManager.CompilerOptimize=6
 PA11.Signal=GPIO_Input
 PA14.Signal=SYS_JTCK-SWCLK
 ProjectManager.HeapSize=0x10
-Mcu.Pin15=PA8
+Mcu.Pin15=PB15
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.Pin16=PA9
-Mcu.Pin13=PB14
-Mcu.Pin14=PB15
-Mcu.Pin19=PA13
+Mcu.Pin16=PA8
+Mcu.Pin13=PB13
+Mcu.Pin14=PB14
+Mcu.Pin19=PA11
 ProjectManager.ComputerToolchain=false
-Mcu.Pin17=PA10
-Mcu.Pin18=PA11
+Mcu.Pin17=PA9
+Mcu.Pin18=PA10
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-Mcu.Pin11=PB12
-Mcu.Pin12=PB13
-Mcu.Pin10=PB11
+Mcu.Pin11=PB11
+Mcu.Pin12=PB12
+Mcu.Pin10=PB10
 PB7.Locked=true
 PA0-WKUP.GPIO_PuPd=GPIO_PULLUP
 PB1.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
@@ -199,6 +204,7 @@ ProjectManager.DeviceId=STM32F103C8Tx
 PB12.GPIOParameters=PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
 PB12.Signal=GPIO_Output
 ProjectManager.LibraryCopy=1
+PA3.GPIO_Label=NO_REPEAT
 PB1.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
 PA7.Signal=GPIO_Output
 isbadioc=false
